--- a/src/allCss/Login.css
+++ b/src/allCss/Login.css
@@ -1,76 +1,92 @@
-/* .allLogin {
-} */
+ .allLogin {
+   display: flex;
+   width: 100%;
+   height: 100vh;
+   color: white;
+   background: url('../Img/bankImg.jpg') no-repeat bottom center scroll;
+   background-position: 30% 5%;
+   background-size: cover;
+   justify-content: center;
+   align-items: center;
+ }
 
-.bankImg {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-}
+ .login {
+   display: flex;
+   width: 100vw;
+   height: 100vh;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+   gap: 25px;
+   width: 100%;
+   height: 100%;
+   max-width: 650px;
+   max-height: 380px;
 
-.login {
-  border: solid 5px blue;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  width: 525px;
-  height: 356px;
-  left: 377px;
-  top: 201px;
+   background: #FFFFFF;
+   box-shadow: 0px 0px 26px rgba(68, 73, 85, 0.2);
+   border-radius: 20px;
+ }
 
-  background: #FFFFFF;
-  box-shadow: -4px 9px 13px rgba(3, 107, 82, 0.3);
-  border-radius: 10px;
-}
+ .loginImg {
+   height: 56.14px;
+   position: relative;
+   width: 268.6px;
+ }
 
-.loginImg {
-  height: 56.14px;
-  position: relative;
-  width: 268.6px;
-}
-
-.form {
-  display: flex;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+ .form {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
 
  .enterButton {
-  /* box-sizing: border-box; */
-/* position: absolute; */
-width: 330px;
-height: 40px;
-color: white;
-background: #003BE5;
-border: 1px solid #003BE5;
-border-radius: 5px;
-}
+   width: 330px;
+   height: 40px;
+   color: white;
+   background: #003BE5;
+   border: 1px solid #003BE5;
+   border-radius: 5px;
+   cursor: pointer;
+ }
 
-/* .inputsTexts {
-  background: #FFFFFF;
+ .enterButton:hover {
+  width: 330px;
+  height: 40px;
+  color: white;
+  background: #003BE5;
   border: 1px solid #003BE5;
   border-radius: 5px;
-  box-sizing: border-box;
-  display: block;
-  height: 40px;
-  left: 475px;
-  position: relative;
-  top: 360px;
-  width: 330px;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
-.inputsTextss {
-  background: #FFFFFF;
-  border: 1px solid #003BE5;
-  border-radius: 5px;
-  box-sizing: border-box;
-  display: block;
-  height: 40px;
-  left: 475px;
-  position: relative;
-  top: 380px;
+ .disabledButton {
   width: 330px;
-} */
+   height: 40px;
+   color: white;
+   background: #003BE5;
+   border: 1px solid #003BE5;
+   border-radius: 5px;
+   opacity: 0.5;
+ }
+
+ .inputsTexts {
+   box-sizing: border-box;
+   width: 330px;
+   height: 40px;
+   background: #FFFFFF;
+   border: 1px solid #003BE5;
+   border-radius: 5px;
+ }
+
+ .inputsTextss {
+   box-sizing: border-box;
+   width: 330px;
+   height: 40px;
+   background: #FFFFFF;
+   border: 1px solid #003BE5;
+   border-radius: 5px;
+   margin-top: 5px;
+   margin-bottom: 5px;
+ }
