--- a/src/allCss/Wallet.css
+++ b/src/allCss/Wallet.css
@@ -1,162 +1,59 @@
-/* .walletImg {
-  position: absolute;
-  width: 250.19px;
-  height: 52.29px;
-  left: 230.99px;
-  top: 56.99px;
-}
-
-.expenses {
-  position: absolute;
-  width: 270px;
-  height: 28.7px;
-  left: 555px;
-  top: 81px;
-}
-
-.test {
-  position: absolute;
-  width: 233px;
-  height: 14px;
-  left: 592px;
-  top: 88px;
-
-  font-family: "Epilogue";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 14px;
-
-  color: #003be5;
-}
-
-.email {
-  position: absolute;
-  width: 123px;
-  height: 14px;
-  left: 931px;
-  top: 88px;
-
-  font-family: "Epilogue";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 14px;
-  display: flex;
-  align-items: center;
-
-  color: #2fc18c;
-}
-
-/* .test {
-  position: relative;
-width: 1280px;
-height: 720px;
-
-background: #2FC18C;
-mix-blend-mode: normal;
-} */
-
-.table {
-  position: absolute;
-width: 1040px;
-height: 129px;
-left: 122px;
-top: 421px;
-}
-
-.thead {
-  position: absolute;
-width: 1035.38px;
-height: 53.2px;
-left: 122.24px;
-top: 421px;
-}
-
-.tbody {
-  position: absolute;
-width: 998.69px;
-height: 67.52px;
-left: 124.31px;
-top: 476.25px;
-}
-
-.formButton {
-  color: white;
-  background-color: #2FC18C;
-  position: absolute;
-width: 330px;
-height: 40px;
-left: 475px;
-top: 318px;
-}
-
 .form {
+  z-index: 3;
   position: absolute;
-width: 820px;
-height: 87px;
-left: 232px;
-top: 179px;
-
-}
-
-.despesa {
-  position: absolute;
-width: 460px;
-height: 30px;
-left: 232px;
-top: 179px;
-
-}
-
-.testt {
-  position: absolute;
-width: 209.72px;
-height: 14px;
-left: 232px;
-top: 186px;
-
-font-family: 'Epilogue';
+    width: 80%; 
+    height: 30%;
+    display: flex;
+    background: rgba(225, 229, 235, 0.49);
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    color: #003BE5;
+    font-family: 'Epilogue';
 font-style: normal;
 font-weight: 700;
-font-size: 14px;
+font-size: 17px;
 line-height: 14px;
-display: flex;
-align-items: center;
+}
 
+.allForm {
+  position: absolute;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.inputs {
+  border: 1px solid #003BE5;
+border-radius: 5px;
 color: #003BE5;
+width: 288.86px;
+height: 30px;
+margin-right: 15px;
+margin-left: 15px;
+margin-bottom: 15px;
+background-color: white;
 }
 
-.method {
-  position: absolute;
-width: 403px;
-height: 30px;
-left: 463px;
-top: 235px;
+.btnForm {
+  border: solid 5px green;
+  margin-top: 40vh;
+  width: 330px;
+height: 40px;
+background: #2FC18C;
+border: 1px solid #2FC18C;
+border-radius: 5px;
+cursor: pointer;
+color: white;
 }
 
-.categories {
-  position: absolute;
-width: 330px;
-height: 30px;
-left: 722px;
-top: 179px;
-
-}
-
-.coin {
-  position: absolute;
-width: 155px;
-height: 30px;
-left: 896px;
-top: 236px;
-}
-
-.value {
-  position: absolute;
-width: 201px;
-height: 30px;
-left: 232px;
-top: 236px;
-
-} */
+.btnForm:hover {
+  opacity: 0.8;
+} 
