--- a/src/allCss/Header.css
+++ b/src/allCss/Header.css
@@ -51,3 +51,41 @@ html {
   font-weight: 700;
   color: #2FC18C;
 }
+
+
+@media (max-width : 928px) {
+  .allHeader {
+    width: 80%;
+  }
+
+  .headerImg {
+    width: 150px;
+    height: 50px;
+    margin-top: 7vh;
+  }
+
+  .expenses {
+    font-size: 14px;
+    line-height: 14px;
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 700;
+    color: #003BE5;
+  }
+
+  .email {
+    font-size: 14px;
+    line-height: 14px;
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 700;
+    color: #2FC18C;
+  }
+}
+
+@media (max-width : 640px ) {
+  .allHeader {
+    width: 70%;
+    height: 65%;
+  }
+}
