--- a/src/allCss/Table.css
+++ b/src/allCss/Table.css
@@ -162,6 +162,21 @@ body {
     color: white;
   }
 
+
+  .table {
+    margin-top: 30vh;
+    width: 110%;
+    height: auto;
+    background: #003BE5;
+    box-shadow: -4px 9px 13px rgba(3, 107, 82, 0.3);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 40px;
+    border-collapse: collapse;
+  }
+
 }
 
 @media (max-width : 320px) {
