--- a/src/allCss/Table.css
+++ b/src/allCss/Table.css
@@ -1,29 +1,30 @@
+/* stylelint-disable indentation */
 body {
-  background-image: url('../Img/bankImg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
   background-attachment: fixed;
+  background-image: url('../Img/bankImg.jpg');
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
 }
 
 
 .allTable {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  width: 100%;
+  align-items: flex-start;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 2;
 
 }
 
 .table {
+  background: #003BE5;
+  height: auto;
   margin-top: 30vh;
   width: 95%;
-  height: auto;
-  background: #003BE5;
   box-shadow: -4px 9px 13px rgba(3, 107, 82, 0.3);
   border-radius: 10px;
   display: flex;
@@ -176,6 +177,29 @@ body {
     padding-bottom: 40px;
     border-collapse: collapse;
   }
+
+  .tdTable {
+    /* padding: 5px; */
+    width: 15.56px;
+    border-top: 1px solid #2FC18C;
+    width: 19px;
+
+    font-family: 'Epilogue';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 10px;
+    line-height: 10px;
+    color: #2FC18C;
+  }
+
+  .desc {
+     padding-right: 1px; 
+     padding-left: 1px; 
+  }
+  
+   .desc2 {
+    padding-right: 15px;
+  } 
 
 }
 
