--- a/src/allCss/Header.css
+++ b/src/allCss/Header.css
@@ -25,13 +25,13 @@ html {
   justify-content: space-around;
   height: 60%;
   width: 70%;
-  align-items: baseline;
+  align-items: flex-start;
 }
 
 .headerImg {
-  width: 320px;
-  height: 70px;
-  margin-top: 7vh;
+  width: 180px;
+  height: 170px;
+  /* margin-top: 7vh; */
 }
 
 .expenses {
@@ -41,6 +41,7 @@ html {
   font-style: normal;
   font-weight: 700;
   color: #003BE5;
+  margin-top: 10vh;
 }
 
 .email {
@@ -50,6 +51,7 @@ html {
   font-style: normal;
   font-weight: 700;
   color: #2FC18C;
+  margin-top: 10vh;
 }
 
 
@@ -60,8 +62,7 @@ html {
 
   .headerImg {
     width: 150px;
-    height: 50px;
-    margin-top: 7vh;
+    height: 150px;
   }
 
   .expenses {
@@ -88,11 +89,29 @@ html {
     width: 70%;
     height: 65%;
   }
+  .headerImg {
+    width: 100%;
+    height: 100%;
+    max-width: 100px;
+    max-height: 130px;
+    margin-top: 3vh;
+  }
+
 }
 
 @media (max-width : 460px ) {
   .allHeader {
     width: 90%;
     height: 65%;
+  }
+}
+
+@media (max-width : 300px ) {
+  .headerImg {
+    width: 100%;
+    height: 100%;
+    max-width: 80px;
+    max-height: 100px;
+    margin-top: 5vh;
   }
 }
